work with media on mac page and fix of navbar

--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -25,11 +25,21 @@
     <!-- Navigation menu -->
     <nav class="navbar">
       <div class="nav_items_xmark">
-        <a href="mac.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
-
+        <a href="index.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
+  
         <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
       </div>
-
+  
+      <div class="mob_nav_search" id="nav_search">
+        <div class="search-container">
+          <form class="form_search" action="#">
+            <button type="submit"><i class="fa fa-search"></i></button>
+            <input type="text" placeholder="Sök på apple.com" name="search">
+          </form>
+        </div>
+      </div>
+  
+  
       <ul class="nav-items">
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
@@ -398,7 +408,8 @@
           <li class="link"><a href="#">Handla <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
       </div>
-
+      
+      <div class="gallery2">
       <div class="mac_gallery2">
         <span>Apple Trade In</span>
         <h2 class="big_text_x">Köp en ny Mac till inbytespris.</h2>
@@ -409,6 +420,7 @@
           <li class="link"><a href="#">Ta reda på inbytesvärdet <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
       </div>
+    </div>
 
     </div>
   </section>
