--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -25,10 +25,20 @@
     <!-- Navigation menu -->
     <nav class="navbar">
       <div class="nav_items_xmark">
-        <a href="support.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
+        <a href="index.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
   
         <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
       </div>
+  
+      <div class="mob_nav_search" id="nav_search">
+        <div class="search-container">
+          <form class="form_search" action="#">
+            <button type="submit"><i class="fa fa-search"></i></button>
+            <input type="text" placeholder="Sök på apple.com" name="search">
+          </form>
+        </div>
+      </div>
+  
   
       <ul class="nav-items">
         <li class="nav-item"><a href="index.html">Home</a></li>
