Media på watch och iphone

--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -54,7 +54,7 @@
   </header>
 
   <!-- Boxes -->
-  <section class="big-box">
+  <section class="big-box iphone-big-box">
     <p style="font-size: 17px; margin: 10px;">Nyhet</p>
     <p style="font-size: 20px; font-weight: bold;">iPhone 14</p>
     <p class="fancy-rainbow">Stor och större.</p>
@@ -66,7 +66,7 @@
     <img src="images/iphone_images/Capture1.PNG" alt="">
   </section>
 
-  <section class="big-box" style="background-color: black;">
+  <section class="big-box iphone-big-box" style="background-color: black;">
     <p style="font-size: 17px; margin: 10px; color: white;">Nyhet</p>
     <p style="font-size: 20px; font-weight: bold; color: white;">iPhone 14 Pro</p>
     <p class="fancy-purple" >Bortom Pro.</p>
@@ -78,7 +78,7 @@
     <img src="images/iphone_images/Capture2.PNG" alt="">
   </section>
 
-  <section class="split-box">
+  <section class="split-box big-iphone-2">
     <div style="padding-right: 5vw;">
     <p style="font-size: 20px; font-weight: bold;">iPhone SE</p>
     <p class="fancy-blue">Känn kraften. <br>Se priset.</p>
