--- a/Apple_store/watch.html
+++ b/Apple_store/watch.html
@@ -67,7 +67,7 @@
     <img src="images/watch_images/bigwatch1.PNG" alt="" style="max-width: 1356px;">
   </section>
 
-  <section class="split-box" style="background: black;">
+  <section class="split-box split-watch-1" style="background: black;">
     <img src="images/watch_images/bigwatch2.PNG" alt="">
     <div style="padding-left: 5vw;">
     <p style="font-size: 28px; font-weight:bold; color: white;"><i class="fa-brands fa-apple"></i> WATCH</p>
@@ -82,7 +82,7 @@
     
   </section>
 
-  <section class="split-box" style="background: #f5f5f7;">
+  <section class="split-box split-watch-2" style="background: #f5f5f7;">
     
     <div style="padding-right: 5vw;">
     <p style="font-size: 28px; font-weight:bold;"><i class="fa-brands fa-apple"></i> WATCH</p>
