Finished Support and added some links to MAC

--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="UTF-8">
@@ -54,7 +54,7 @@
       <span class="price">Från 16 495 kr</span>
 
       <ul>
-        <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        <button class="buy_button">Köp</button>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
@@ -70,7 +70,7 @@
       <span class="price">Från 17 495 kr</span>
 
       <ul>
-        <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        <button class="buy_button">Köp</button>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
