--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="UTF-8">
@@ -108,9 +108,17 @@
       funktioner som kunderna förlitar sig på samtidigt som vi skyddar deras integritet och uppgifter. Kunderna ska ha
       tillgång till säkra, tillförlitliga och trygga reparationer med äkta Apple-delar om de behöver dem. <br><br>
       </p>
+      <div class="testar">
+        <ul>
+          <p>Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer.</p>
+          <a href="#">Visa (pdf-fil)</i></a>
+        </ul>
+      </div>
     <p><ul> Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer.</p> <li class="link"><a href="#">Visa (pdf-fil)</i></a></li></ul>
     </div>
   </section>
+
+  <div class="full_line_border"></div>
 
     <!-- Text section nr:2 -->
     <section>
@@ -125,6 +133,8 @@
         </p>
       </div>
     </section>
+
+  <div class="full_line_border"></div>
 
   <!-- Link section -->
   <section>
