--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -118,14 +118,8 @@
       funktioner som kunderna förlitar sig på samtidigt som vi skyddar deras integritet och uppgifter. Kunderna ska ha
       tillgång till säkra, tillförlitliga och trygga reparationer med äkta Apple-delar om de behöver dem. <br><br>
       </p>
-      <div class="testar">
-        <ul>
-          <p>Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer.</p>
-          <a href="#">Visa (pdf-fil)</i></a>
-        </ul>
-      </div>
-    <p><ul> Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer.</p> <li class="link"><a href="#">Visa (pdf-fil)</i></a></li></ul>
-    </div>
+      <p>Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer. <a href="#">Visa (pdf-fil)</i></a></p>
+      
   </section>
 
   <div class="full_line_border"></div>
@@ -135,7 +129,7 @@
       <div class="text_section_support2">
         <h2>Se upp för förfalskade delar</h2><br>
         <p>En del strömadaptrar och batterier som är förfalskade eller kommer från tredje part är felaktigt konstruerade och kan
-        orsaka säkerhetsproblem. Vi rekommenderar att du besöker en Apple Store-butik eller auktoriserad Apple-servicepartner
+        orsaka säkerhetsproblem. Vi rekommenderar att du besöker en  <a href="#">Apple Store-butik</a> eller <a href="#">auktoriserad Apple-servicepartner</a>
         vid batteribyte så att du kan vara säker på att du får ett äkta batteri från Apple. Om du behöver en ny adapter till din
         Apple-enhet rekommenderar vi att du skaffar en strömadapter från Apple. <br><br> Oäkta ersättningsskärmar kan även ha försämrad visuell kvalitet och kan sluta fungera som de ska. Apple-certifierade
         bildskärmsreparationer utförs av betrodda experter som använder äkta Apple-delar.
@@ -149,16 +143,17 @@
   <!-- Link section -->
   <section>
     <div class="link_section_support">
-      <h2>Apples serviceprogram</h2><br>
-
-    <ul>
-      <li class="link"><a href="#">Serviceprogram för problem med tom skärm på Apple Watch Series 6</i></a></li><br>
-      <li class="link"><a href="#">Serviceprogram för problem med att inget ljud hörs på iPhone 12 och iPhone 12 Pro</i></a></li><br>
-      <li class="link"><a href="#">Utbytesprogrammet för skärmmodulen på iPhone 11 vid problem med Touch</i></a></li><br>
-      <li class="link"><a href="#">Batteriåterkallningsprogram för 15-tums MacBook Pro</i></a></li><br>
-      <li class="link"><a href="#">Återkallningsprogram för Apple-strömadapter med tre stift för vägguttag</i></a></li><br>
-      <li class="link"><a href="#">Se alla program <i class="fa-solid fa-chevron-right"></i></a></li>
-    </ul>
+      <div class="support-section-container">
+        <h2>Apples serviceprogram</h2><br>
+        <ul>
+          <li class="link"><a href="#">Serviceprogram för problem med tom skärm på Apple Watch Series 6</i></a></li><br>
+          <li class="link"><a href="#">Serviceprogram för problem med att inget ljud hörs på iPhone 12 och iPhone 12 Pro</i></a></li><br>
+          <li class="link"><a href="#">Utbytesprogrammet för skärmmodulen på iPhone 11 vid problem med Touch</i></a></li><br>
+          <li class="link"><a href="#">Batteriåterkallningsprogram för 15-tums MacBook Pro</i></a></li><br>
+          <li class="link"><a href="#">Återkallningsprogram för Apple-strömadapter med tre stift för vägguttag</i></a></li><br>
+          <li class="link"><a href="#">Se alla program <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
+      </div>
     </div>
   </section>
 
