--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -26,10 +26,10 @@
     <nav class="navbar">
       <div class="nav_items_xmark">
         <a href="index.html" class="logo"><i class="fa-solid fa-xmark"></i></a>
-  
+
         <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
       </div>
-  
+
       <div class="mob_nav_search" id="nav_search">
         <div class="search-container">
           <form class="form_search" action="#">
@@ -38,8 +38,8 @@
           </form>
         </div>
       </div>
-  
-  
+
+
       <ul class="nav-items">
         <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
@@ -80,11 +80,12 @@
         <h3>Alltid Pro. Överallt.</h3>
         <span class="price">Från 17 495 kr</span>
 
-      <ul>
-        <button class="buy_button">Köp</button>
-        <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
+        <ul>
+          <button class="buy_button">Köp</button>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
+      </div>
+    </section>
   </section>
 
 
@@ -407,19 +408,20 @@
           <li class="link"><a href="#">Handla <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
       </div>
-      
+
       <div class="gallery2">
-      <div class="mac_gallery2">
-        <span>Apple Trade In</span>
-        <h2 class="big_text_x">Köp en ny Mac till inbytespris.</h2>
-        <p class="text_dark">Byt in din godkända dator och få ett lägre pris på en ny. Eller återvinn den gratis. Det
-          är bra för dig. Och för
-          planeten.</p>
-        <ul>
-          <li class="link"><a href="#">Ta reda på inbytesvärdet <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
+        <div class="mac_gallery2">
+          <span>Apple Trade In</span>
+          <h2 class="big_text_x">Köp en ny Mac till inbytespris.</h2>
+          <p class="text_dark">Byt in din godkända dator och få ett lägre pris på en ny. Eller återvinn den gratis.
+            Det
+            är bra för dig. Och för
+            planeten.</p>
+          <ul>
+            <li class="link"><a href="#">Ta reda på inbytesvärdet <i class="fa-solid fa-chevron-right"></i></a></li>
+          </ul>
+        </div>
       </div>
-    </div>
 
     </div>
   </section>
@@ -512,7 +514,8 @@
   <section class="content_gallery-center-image">
     <div class="content_mac">
       <h2>Proffsappar</h2>
-      <p>Proffs som är redo att ta sin kreativitet till nästa nivå kan använda de här bransch­ledande apparna för att få
+      <p>Proffs som är redo att ta sin kreativitet till nästa nivå kan använda de här bransch­ledande apparna för att
+        få
         maximal
         kontroll över redi­gering, bearbetning och produktion av musik och film.</p>
 
@@ -545,6 +548,8 @@
     <div class="content_one_right">
     </div>
   </section>
+
+
 
   <!-- Footer -->
   <footer>
