Fixade semantik på Watch, iPhone, Support

--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -55,26 +55,30 @@
 
   <!-- Boxes -->
   <section class="big-box iphone-big-box">
-    <p style="font-size: 17px; margin: 10px;">Nyhet</p>
-    <p style="font-size: 20px; font-weight: bold;">iPhone 14</p>
-    <p class="fancy-rainbow">Stor och större.</p>
-    <p style="font-size: 21px; padding-top: 20px;">Från 11 995 kr</p>
-    <ul class="a-list">
-      <button >Köp</button>
-      <a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
-    </ul>
+    <div>
+      <p style="font-size: 17px; margin: 10px;">Nyhet</p>
+      <p style="font-size: 20px; font-weight: bold;">iPhone 14</p>
+      <p class="fancy-rainbow">Stor och större.</p>
+      <p style="font-size: 21px; padding-top: 20px;">Från 11 995 kr</p>
+      <ul class="a-list">
+        <li><button >Köp</button></li>
+        <li><a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a></li>
+      </ul>
+    </div>
     <img src="images/iphone_images/Capture1.PNG" alt="">
   </section>
 
   <section class="big-box iphone-big-box" style="background-color: black;">
-    <p style="font-size: 17px; margin: 10px; color: white;">Nyhet</p>
-    <p style="font-size: 20px; font-weight: bold; color: white;">iPhone 14 Pro</p>
-    <p class="fancy-purple" >Bortom Pro.</p>
-    <p style="font-size: 21px; color: white; padding-top: 20px;">Från 14 995 kr</p>
-    <ul class="a-list">
-      <button >Köp</button>
-      <a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
-    </ul>
+    <div>
+      <p style="font-size: 17px; margin: 10px; color: white;">Nyhet</p>
+      <p style="font-size: 20px; font-weight: bold; color: white;">iPhone 14 Pro</p>
+      <p class="fancy-purple" >Bortom Pro.</p>
+      <p style="font-size: 21px; color: white; padding-top: 20px;">Från 14 995 kr</p>
+      <ul class="a-list">
+        <li><button>Köp</button></li>
+        <li><a href="#">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a></li>
+      </ul>
+    </div>
     <img src="images/iphone_images/Capture2.PNG" alt="">
   </section>
 
@@ -84,8 +88,8 @@
     <p class="fancy-blue">Känn kraften. <br>Se priset.</p>
     <p style="font-size: 21px; padding-top: 20px;">Från 6 495 kr</p>
     <ul class="a-list">
-      <button >Köp</button>
-      <a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
+      <li><button>Köp</button></li>
+      <li><a href="#">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a></li>
     </ul>
   </div>
     <img src="images/iphone_images/Capture3.PNG" alt="">
@@ -356,7 +360,7 @@
         Fri retur ingår. Se leveransdatum
         vid utcheckningen.
       </p>
-      <li class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+      <div class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></div>
     </div>
 
     <div class="mac-info">
@@ -366,7 +370,7 @@
         Har du frågor? Ring en specialist eller chatta online.
         Ring 020‑120 99 71.
       </p>
-      <li class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></li>
+      <div class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></div>
     </div>
 
   </section>
