--- a/Apple_store/support.html
+++ b/Apple_store/support.html
@@ -68,7 +68,7 @@
     <div class="img_nav_support">
       <a class="img_nav" href=""><img style="height: 50px; width: 54px;" src="images/support_images/ic1.png" alt=""><span>iPhone</span></a>
       <a class="img_nav" href=""><img style="height: 50px; width: 79px;" src="images/support_images/ic2.png" alt=""><span>Mac</span></a>
-      <a class="img_nav" href=""><img style="height: 55px; width: 57px;"src="images/support_images/ic3.png" alt=""><span>iPad</span></a>
+      <a class="img_nav" href=""><img style="height: 55px; width: 57px;" src="images/support_images/ic3.png" alt=""><span>iPad</span></a>
       <a class="img_nav img_nav4" href=""><img style="height: 50px; width: 33px;" src="images/support_images/ic4.png" alt=""><span>Watch</span></a>
     </div>
   </section>
@@ -104,7 +104,7 @@
         <p class="text_light_y">Välj en produkt så hittar vi den bästa lösningen åt <br> dig.</p>
 
       <ul>
-        <li class="link"><a href="#">Börja nu <i class="fa-solid fa-chevron-right"></i></a></li><br><br>
+        <li class="link"><a href="#">Börja nu <i class="fa-solid fa-chevron-right"></i></a><br><br></li>
         <li class="link"><a href="#">Hämta appen Apple Support <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
@@ -118,8 +118,8 @@
       funktioner som kunderna förlitar sig på samtidigt som vi skyddar deras integritet och uppgifter. Kunderna ska ha
       tillgång till säkra, tillförlitliga och trygga reparationer med äkta Apple-delar om de behöver dem. <br><br>
       </p>
-      <p>Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer. <a href="#">Visa (pdf-fil)</i></a></p>
-      
+      <p>Läs mer om Apples strategi för att utöka tillgången till säkra och tillförlitliga reparationer. <a href="#">Visa (pdf-fil)</a></p>
+    </div>
   </section>
 
   <div class="full_line_border"></div>
@@ -146,11 +146,11 @@
       <div class="support-section-container">
         <h2>Apples serviceprogram</h2><br>
         <ul>
-          <li class="link"><a href="#">Serviceprogram för problem med tom skärm på Apple Watch Series 6</i></a></li><br>
-          <li class="link"><a href="#">Serviceprogram för problem med att inget ljud hörs på iPhone 12 och iPhone 12 Pro</i></a></li><br>
-          <li class="link"><a href="#">Utbytesprogrammet för skärmmodulen på iPhone 11 vid problem med Touch</i></a></li><br>
-          <li class="link"><a href="#">Batteriåterkallningsprogram för 15-tums MacBook Pro</i></a></li><br>
-          <li class="link"><a href="#">Återkallningsprogram för Apple-strömadapter med tre stift för vägguttag</i></a></li><br>
+          <li class="link"><a href="#">Serviceprogram för problem med tom skärm på Apple Watch Series 6</a><br></li>
+          <li class="link"><a href="#">Serviceprogram för problem med att inget ljud hörs på iPhone 12 och iPhone 12 Pro</a><br></li>
+          <li class="link"><a href="#">Utbytesprogrammet för skärmmodulen på iPhone 11 vid problem med Touch</a><br></li>
+          <li class="link"><a href="#">Batteriåterkallningsprogram för 15-tums MacBook Pro</a><br></li>
+          <li class="link"><a href="#">Återkallningsprogram för Apple-strömadapter med tre stift för vägguttag</a><br></li>
           <li class="link"><a href="#">Se alla program <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
       </div>
