--- a/Apple_store/watch.html
+++ b/Apple_store/watch.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 
 <head>
   <meta charset="UTF-8">
@@ -56,14 +56,16 @@
   <!-- Home section -->
 
   <section class="big-box watch-big-box" style="background: #f5f5f7; ">
-    <p style="font-size: 28px; font-weight:bold;"><i class="fa-brands fa-apple"></i> WATCH</p>
-    <p style="font-size: 14px; font-weight: bold; color: orange;">ULTRA</p>
-    <p style="font-size: 48px; font-weight: 600;">Nu börjar äventyret</p>
-    <p style="font-size: 21px; padding-top: 20px;">10 995 kr</p>
-    <ul class="a-list">
-      <button >Köp</button>
-      <a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
-    </ul>
+    <div>
+      <p style="font-size: 28px; font-weight:bold;"><i class="fa-brands fa-apple"></i> WATCH</p>
+      <p style="font-size: 14px; font-weight: bold; color: orange;">ULTRA</p>
+      <p style="font-size: 48px; font-weight: 600;">Nu börjar äventyret</p>
+      <p style="font-size: 21px; padding-top: 20px;">10 995 kr</p>
+      <ul class="a-list">
+        <li><button>Köp</button></li>
+        <li><a href="#">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a></li>
+      </ul>
+    </div>
     <img src="images/watch_images/bigwatch1.PNG" alt="" style="max-width: 1356px;">
   </section>
 
@@ -75,8 +77,8 @@
     <p class="big-watch-2" style="color: white; font-size: 42px; font-weight: 600;">Ett rejält kliv för hälsan.</p>
     <p style="font-size: 21px; padding-top: 20px; color: white;">Från 5 495 kr</p>
     <ul class="a-list">
-      <button >Köp</button>
-      <a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
+      <li><button>Köp</button></li>
+      <li><a href="#">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a></li>
     </ul>
     </div>
     
@@ -90,8 +92,8 @@
     <p class="big-watch-3" style="font-size: 42px; font-weight: 600;">Väl värd att tycka om.</p>
     <p style="font-size: 21px; padding-top: 20px;">Från 3 395 kr</p>
     <ul class="a-list">
-      <button >Köp</button>
-      <a href="#" >Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
+      <li><button>Köp</button></li>
+      <li><a href="#">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a></li>
     </ul>
     </div>
     <img src="images/watch_images/bigwatch3.PNG" alt="">
@@ -345,7 +347,7 @@
         <i class="fa-solid fa-box-open"></i>
         <h4>Snabb leverans eller hämtning i butik</h4>
         <p>Välj gratis leverans eller hämta varor som finns i lager på närmaste Apple Store.</p>
-        <li class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+        <div class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></div>
       </div>          
     </section>
 
