Semantik mob-programmering ipad och MAC

--- a/Apple_store/ipad.html
+++ b/Apple_store/ipad.html
@@ -62,7 +62,7 @@
       <p class="text_dark_ipad">Lekfull. Ritsugen. <br> Magisk.</p>
       <p class="price_buy">Från 6 595 kr</p>
       <ul>
-        <button class="buy_button">Köp</button><br>
+        <li><button class="buy_button">Köp</button><br></li>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
@@ -78,8 +78,8 @@
         <p class="price_buy_white">Från 11 995 kr</p> -->
 
         <ul>
-          <button class="buy_button">Köp</button><br>
-          <li class="link"><a href="#">Läs Mer<i class="fa-solid fa-chevron-right"></i></a></li>
+          <li><button class="buy_button">Köp</button><br></li>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
       </div>
       <div class="content_right"></div>
@@ -194,14 +194,14 @@
       <p>
         Välj gratis leverans eller hämta varor som finns i lager på närmaste Apple Store.
       </p>
-      <li class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+      <div class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></div>
     </div>
 
     <div class="ipad-info">
       <i class="fa-solid fa-record-vinyl"></i>
       <h4>Lägg till gravyr</h4>
       <p>Gravera in ditt namn eller ett personligt budskap på din iPad, helt gratis. Bara hos Apple.</p>
-      <li class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></li>
+      <div class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></div>
     </div>
 
     <div class="ipad-info">
@@ -212,46 +212,7 @@
         Ring 020‑120 99 71.
       </p>
     </div>
-
   </section>
-
-  <!-- Information boxes -->
-
-  <!-- <section class="ipad_gallery">
-    <div class="ipad_box_container">
-
-      <div class="ipad_gallery1">
-        <h2 class="big_text_x">Apple Pencil</h2>
-        <p class="text_dark">Tänk ut det. Få ner det.</p>
-        <ul>
-          <li class="link"><a href="#">Handla <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-      </div>
-
-      <div class="ipad_gallery2">
-        <span>Apple Trade In</span>
-        <h2 class="big_text_x">Köp en ny Mac till inbytespris.</h2>
-        <p class="text_dark">Byt in din godkända dator och få ett lägre pris på en ny. Eller återvinn den gratis. Det
-          är bra för dig. Och för
-          planeten.</p>
-        <ul>
-          <li class="link"><a href="#">Handla <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </section> -->
-
-  <!-- Ipad accessories text -->
-  <!-- <section class="about change_ipad_text">
-      <div class="content_text">
-        <h2 class="big_text_xl">iPad-tillbehör</h2>
-      </div>
-    </section> -->
-
-  <!-- Ipad accessories -->
-
 
   <!-- Footer -->
   <footer>
