--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -64,7 +64,7 @@
       <span class="price">Från 16 495 kr</span>
 
       <ul>
-        <button class="buy_button">Köp</button>
+        <li><button class="buy_button">Köp</button><br></li>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
@@ -81,7 +81,7 @@
         <span class="price">Från 17 495 kr</span>
 
         <ul>
-          <button class="buy_button">Köp</button>
+          <li><button class="buy_button">Köp</button><br></li>
           <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
         </ul>
       </div>
@@ -436,7 +436,7 @@
         Fri retur ingår. Se leveransdatum
         vid utcheckningen.
       </p>
-      <li class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+      <div class="link-info"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></div>
     </div>
 
     <div class="mac-info">
@@ -446,13 +446,10 @@
         Har du frågor? Ring en specialist eller chatta online.
         Ring 020‑120 99 71.
       </p>
-      <li class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></li>
+      <div class="link-info"><a href="#">Kontakta oss <i class="fa-solid fa-chevron-right"></i></a></div>
     </div>
 
   </section>
-
-  </div>
-
 
   <section class="big_text">
     <h2>Vad gör en Mac till en Mac?</h2>
